# pointcloudpartitionerstep

./: .gitignore  README.rst  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  configuration.rst  index.rst  specification.rst  workflow-setup.rst
mapclientplugins/pointcloudpartitionerstep/: __init__.py  configuredialog.py  resources_rc.py  step.py
mapclientplugins/pointcloudpartitionerstep/model/: detection.py  marker.py  plane.py  pointcloudpartitionermodel.py
mapclientplugins/pointcloudpartitionerstep/qt/: configuredialog.ui  pointcloudpartitionerwidget.ui  resources.qrc
mapclientplugins/pointcloudpartitionerstep/scene/: detection.py  marker.py  pointcloudpartitionerscene.py
mapclientplugins/pointcloudpartitionerstep/utils/: zinc.py
mapclientplugins/pointcloudpartitionerstep/view/: customlistview.py  customsceneselection.py  grouptableview.py  pointcloudpartitionerwidget.py  ui_pointcloudpartitionerwidget.py  zincpointcloudpartitionerwidget.py
