[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mapclientplugins.pointcloudpartitionerstep"
authors = [
    {name = "Hugh Sorby"},
    {name = "Timothy Salemink", email = "tim.nicolas@outlook.com"},
]
description = ""
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
]
dynamic = ["version", "dependencies"]

[project.urls]
Repository = "https://github.com/mapclient-plugins/mapclientplugins.pointcloudpartitionerstep"

[tool.setuptools.dynamic]
version = {attr = "mapclientplugins.pointcloudpartitionerstep.__version__"}
dependencies = {file = ["requirements.txt"]}